...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.099"
        app:srcCompat="@drawable/logo_mad" />

    <Button
        android:id="@+id/adminBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="Login as Admin"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
...
